Add cat fact
