# protogen/go/api/v1/cat_service.pb.gw.go
@@ -31,24 +31,6 @@ var _ = runtime.String
 var _ = utilities.NewDoubleArray
 var _ = metadata.Join
 
-func request_CatService_GetFact_0(ctx context.Context, marshaler runtime.Marshaler, client CatServiceClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
-	var protoReq GetFactRequest
-	var metadata runtime.ServerMetadata
-
-	msg, err := client.GetFact(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
-	return msg, metadata, err
-
-}
-
-func local_request_CatService_GetFact_0(ctx context.Context, marshaler runtime.Marshaler, server CatServiceServer, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
-	var protoReq GetFactRequest
-	var metadata runtime.ServerMetadata
-
-	msg, err := server.GetFact(ctx, &protoReq)
-	return msg, metadata, err
-
-}
-
 func request_CatService_CreateCat_0(ctx context.Context, marshaler runtime.Marshaler, client CatServiceClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
 	var protoReq CreateCatRequest
 	var metadata runtime.ServerMetadata
@@ -106,29 +88,6 @@ func local_request_CatService_ListCats_0(ctx context.Context, marshaler runtime.
 // StreamingRPC :currently unsupported pending https://github.com/grpc/grpc-go/issues/906.
 // Note that using this registration option will cause many gRPC library features to stop working. Consider using RegisterCatServiceHandlerFromEndpoint instead.
 func RegisterCatServiceHandlerServer(ctx context.Context, mux *runtime.ServeMux, server CatServiceServer) error {
-
-	mux.Handle("GET", pattern_CatService_GetFact_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
-		ctx, cancel := context.WithCancel(req.Context())
-		defer cancel()
-		var stream runtime.ServerTransportStream
-		ctx = grpc.NewContextWithServerTransportStream(ctx, &stream)
-		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
-		rctx, err := runtime.AnnotateIncomingContext(ctx, mux, req, "/api.v1.CatService/GetFact", runtime.WithHTTPPathPattern("/v1/cats/-/fact"))
-		if err != nil {
-			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
-			return
-		}
-		resp, md, err := local_request_CatService_GetFact_0(rctx, inboundMarshaler, server, req, pathParams)
-		md.HeaderMD, md.TrailerMD = metadata.Join(md.HeaderMD, stream.Header()), metadata.Join(md.TrailerMD, stream.Trailer())
-		ctx = runtime.NewServerMetadataContext(ctx, md)
-		if err != nil {
-			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
-			return
-		}
-
-		forward_CatService_GetFact_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
-
-	})
 
 	mux.Handle("POST", pattern_CatService_CreateCat_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
 		ctx, cancel := context.WithCancel(req.Context())
@@ -217,26 +176,6 @@ func RegisterCatServiceHandler(ctx context.Context, mux *runtime.ServeMux, conn 
 // "CatServiceClient" to call the correct interceptors.
 func RegisterCatServiceHandlerClient(ctx context.Context, mux *runtime.ServeMux, client CatServiceClient) error {
 
-	mux.Handle("GET", pattern_CatService_GetFact_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
-		ctx, cancel := context.WithCancel(req.Context())
-		defer cancel()
-		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
-		rctx, err := runtime.AnnotateContext(ctx, mux, req, "/api.v1.CatService/GetFact", runtime.WithHTTPPathPattern("/v1/cats/-/fact"))
-		if err != nil {
-			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
-			return
-		}
-		resp, md, err := request_CatService_GetFact_0(rctx, inboundMarshaler, client, req, pathParams)
-		ctx = runtime.NewServerMetadataContext(ctx, md)
-		if err != nil {
-			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
-			return
-		}
-
-		forward_CatService_GetFact_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
-
-	})
-
 	mux.Handle("POST", pattern_CatService_CreateCat_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
 		ctx, cancel := context.WithCancel(req.Context())
 		defer cancel()
@@ -281,16 +220,12 @@ func RegisterCatServiceHandlerClient(ctx context.Context, mux *runtime.ServeMux,
 }
 
 var (
-	pattern_CatService_GetFact_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2, 2, 3}, []string{"v1", "cats", "-", "fact"}, ""))
-
 	pattern_CatService_CreateCat_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"v1", "cats"}, ""))
 
 	pattern_CatService_ListCats_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"v1", "cats"}, ""))
 )
 
 var (
-	forward_CatService_GetFact_0 = runtime.ForwardResponseMessage
-
 	forward_CatService_CreateCat_0 = runtime.ForwardResponseMessage
 
 	forward_CatService_ListCats_0 = runtime.ForwardResponseMessage
