# service/api/v1/cat_service.go
@@ -3,6 +3,7 @@ package v1
 import (
 	"context"
 	"encoding/json"
+	"fmt"
 	"io"
 	"log"
 	"net/http"
@@ -30,19 +31,32 @@ func NewCatService(
 }
 
 func (catService *CatService) CreateCat(ctx context.Context, request *v1.CreateCatRequest) (*v1.CreateCatResponse, error) {
+	var err error
 	cat := &entities.Cat{
-		ID:   request.Cat.Id,
-		Name: request.Cat.Name,
+		ID:   request.Cat.GetId(),
+		Name: request.Cat.GetName(),
+		Fact: "",
 	}
 
-	err := catService.storageGateway.CreateCat(ctx, cat)
+	cat.Fact, err = catService.getFact(ctx)
+	if err != nil {
+		return nil, fmt.Errorf("failed to get cat fact: %w", err)
+	}
+
+	err = catService.storageGateway.CreateCat(ctx, cat)
 	if err != nil {
 		log.Printf("failed to create cat in gateway: %s", err)
 		return nil, status.Error(codes.Internal, "internal error")
 	}
 
+	pCat := &v1.Cat{
+		Id:   cat.ID,
+		Name: cat.Name,
+		Fact: cat.Fact,
+	}
+
 	return &v1.CreateCatResponse{
-		Cat: request.Cat,
+		Cat: pCat,
 	}, nil
 }
 
@@ -58,6 +72,7 @@ func (catService *CatService) ListCats(ctx context.Context, _ *v1.ListCatsReques
 		pCats = append(pCats, &v1.Cat{
 			Id:   cat.ID,
 			Name: cat.Name,
+			Fact: cat.Fact,
 		})
 	}
 
@@ -66,35 +81,33 @@ func (catService *CatService) ListCats(ctx context.Context, _ *v1.ListCatsReques
 	}, nil
 }
 
-func (catService *CatService) GetFact(ctx context.Context, _ *v1.GetFactRequest) (*v1.GetFactResponse, error) {
+type CatFact struct {
+	Fact string
+}
+
+func (catService *CatService) getFact(ctx context.Context) (string, error) {
 	request, err := http.NewRequestWithContext(ctx, http.MethodGet, "https://catfact.ninja/fact", nil)
 	if err != nil {
-		log.Printf("failed to build request: %s", err)
-		return nil, status.Error(codes.Internal, "internal error")
+		return "", fmt.Errorf("failed to build request: %w", err)
 	}
 
 	resp, err := catService.httpClient.Do(request)
 	if err != nil {
-		log.Printf("failed to get catfact url: %s", err)
-		return nil, status.Error(codes.Internal, "internal error")
+		return "", fmt.Errorf("failed to get catfact url: %w", err)
 	}
 
 	defer func() { _ = resp.Body.Close() }()
 
 	respBytes, err := io.ReadAll(resp.Body)
 	if err != nil {
-		log.Printf("failed to read response body: %s", err)
-		return nil, status.Error(codes.Internal, "internal error")
+		return "", fmt.Errorf("failed to read response body: %w", err)
 	}
 
-	catFact := new(entities.CatFact)
+	catFact := new(CatFact)
 	err = json.Unmarshal(respBytes, catFact)
 	if err != nil {
-		log.Printf("failed to unmarshal cat fact: %s", err)
-		return nil, status.Error(codes.Internal, "internal error")
+		return "", fmt.Errorf("failed to unmarshal cat fact: %w", err)
 	}
 
-	return &v1.GetFactResponse{
-		Fact: catFact.Fact,
-	}, nil
+	return catFact.Fact, nil
 }
